# 21vek

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_09_26_1618-af52b2d41f7f_first.py
src/: config.py  database.py  main.py  repository.py
src/news/: __init__.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py
src/tasks/: celery.py
